data-extraction/python-spark-notebook/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: default
  namespace: kubeflow-programmerboo
spec:
  host: '*.svc.cluster.local'
  trafficPolicy:
    tls:
      mode: DISABLE
